--- a/main-calc/style-main-calc.css
+++ b/main-calc/style-main-calc.css
@@ -24,6 +24,7 @@ input {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  cursor: pointer;
 }
 #main-text {
   display: flex;
