--- a/contact_form/style_contact.css
+++ b/contact_form/style_contact.css
@@ -213,7 +213,7 @@ input {
 }
 #footer-sub-img {
   position: absolute;
-  width: 98.9vw;
+  width: 100%;
   height: 10vw;
   object-fit: none;
   top: unset;
